<resources>
    <string name="app_name" translatable="false">BlizzPortal</string>
    <string name="select_region">Select Region</string>
    <string name="login">Login</string>
    <string name="battlenetlogo" translatable="false">battlenetLogo</string>
    <string name="bnetlogo" translatable="false">bnetLogo</string>
    <string name="itemsCharacter" translatable="false">item</string>
    <string name="background_character" translatable="false">TODO</string>
    <string name="spec">Specialization</string>
    <string name="stats" translatable="false">Stats</string>
    <string name="spec1" translatable="false">spec1</string>
    <string name="spec2" translatable="false">spec2</string>
    <string name="spec3" translatable="false">spec3</string>
    <string name="talent_information_not_available">Talent information unavailable</string>
    <string name="paragon" translatable="false">Paragon</string>
    <string name="lifetime_kills" translatable="false">Lifetime Kills</string>
    <string name="elite_kills" translatable="false">Elite Kills</string>
    <string name="image_act3" translatable="false">image act3</string>
    <string name="image_act1" translatable="false">image act1</string>
    <string name="image_act2" translatable="false">image act2</string>
    <string name="image_act4" translatable="false">image act4</string>
    <string name="image_act5" translatable="false">image act5</string>
    <string name="shoulders" translatable="false">shoulders</string>
    <string name="chest" translatable="false">chest</string>
    <string name="off_hand" translatable="false">off_hand</string>
    <string name="boots" translatable="false">boots</string>
    <string name="bracers" translatable="false">bracers</string>
    <string name="legs" translatable="false">legs</string>
    <string name="ring2" translatable="false">ring2</string>
    <string name="belt" translatable="false">belt</string>
    <string name="amulet" translatable="false">amulet</string>
    <string name="main_hand" translatable="false">main_hand</string>
    <string name="ring1" translatable="false">ring1</string>
    <string name="head" translatable="false">head</string>
    <string name="gloves" translatable="false">gloves</string>
    <string name="close_button" translatable="false">close button</string>
    <string name="item_icon" translatable="false">item_icon</string>
    <string name="weapon_effect" translatable="false">Weapon Effect</string>
    <string name="gear" translatable="false">Gear</string>
    <string name="skills" translatable="false">Skills</string>
    <string name="paperdoll" translatable="false">paperdoll</string>
    <string name="cube" translatable="false">Cube</string>
    <string name="skill_icon" translatable="false">skill_icon</string>
    <string name="passive_icon" translatable="false">passive_icon</string>
    <string name="sword_for_cube" translatable="false">sword for cube</string>
    <string name="armor_for_cube" translatable="false">armor for cube</string>
    <string name="ring_for_cube" translatable="false">ring for cube</string>
    <string name="tooltip_rune" translatable="false">tooltip rune</string>
    <string name="strength">Strength:</string>
    <string name="dexterity">Dexterity:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="vitality">Vitality:</string>
    <string name="snapshot" translatable="false">SNAPSHOT</string>
    <string name="statistics">Statistics</string>
    <string name="_1v1" translatable="false">1v1</string>
    <string name="team">Team</string>
    <string name="total_career_games">Total Career Games</string>
    <string name="games_played_this_season">Games Played This Season</string>
    <string name="protoss_wins">Protoss Wins</string>
    <string name="zerg_wins">Zerg Wins</string>
    <string name="terran_wins">Terran Wins</string>
    <string name="not_yet_ranked"> - Not Yet Ranked</string>
    <string name="_4v4" translatable="false">4v4</string>
    <string name="_3v3" translatable="false">3v3</string>
    <string name="_2v2" translatable="false">2v2</string>
    <string name="archon" translatable="false">Archon</string>
    <string name="race_levels" translatable="false">race levels</string>
    <string name="zerg" translatable="false">Zerg</string>
    <string name="protoss" translatable="false">Protoss</string>
    <string name="terran" translatable="false">Terran</string>
    <string name="campaign">campaign</string>
    <string name="wings_of_liberty" translatable="false">Wings of Liberty</string>
    <string name="legacy_of_the_void" translatable="false">Legacy of the Void</string>
    <string name="heart_of_the_swarm" translatable="false">Heart of the Swarm</string>
    <string name="campaign_not_complete">Campaign Not Complete</string>
    <string name="top_heroes">Top Heroes</string>
    <string name="time_played">Time Played</string>
    <string name="career_stats">CAREER STATS</string>
    <string name="heroes">Heroes</string>
    <string name="fallen_heroes">Fallen Heroes</string>
    <string name="life_glove" translatable="false">life glove</string>
    <string name="competitive_play" translatable="false">COMPETITIVE PLAY</string>
    <string name="quick_play" translatable="false">QUICK PLAY</string>
    <string name="best">BEST</string>
    <string name="assist">ASSISTS</string>
    <string name="game">GAME</string>
    <string name="average">AVERAGE</string>
    <string name="match_awards">MATCH AWARDS</string>
    <string name="miscellaneous">MISCELLANEOUS</string>
    <string name="combat" translatable="false">COMBAT</string>
    <string name="custom_license_title" translatable="false">Licenses</string>
    <string name="licenses" translatable="false">Licenses</string>
    <string name="settingsTitle">Settings</string>
    <string name="want_to_donate">Want to donate?</string>
    <string name="paypal" translatable="false">Paypal</string>
    <string name="character">Character</string>
    <string name="pvp" translatable="false">PvP</string>
    <string name="banner" translatable="false">banner</string>
    <string name="raid_name" translatable="false">raid name</string>
    <string name="level">Level</string>
    <string name="background" translatable="false">background</string>
    <string name="honor">Honor</string>
    <string name="arena" translatable="false">ARENA</string>
    <string name="battlegrounds" translatable="false">BATTLEGROUNDS</string>
    <string name="_10v10" translatable="false">10v10</string>
    <string name="reputation">Reputation</string>
    <string name="rate_my_app">Rate my app!</string>
    <string name="select_a_language">Select a language</string>
    <string name="logout">Logout</string>
    <string name="world_of_warcraft">World of Warcraft</string>
    <string name="diablo_3">Diablo 3</string>
    <string name="diablo_4" translatable="false">Diablo 4</string>
    <string name="starcraft_2">Starcraft 2</string>
    <string name="overwatch">Overwatch</string>
    <string name="search_character">Search character</string>
    <string name="honorable_kills">Honorable Kills</string>
    <string name="favorites">Favorites</string>
    <string name="achievements">Achievements</string>
    <string name="download_achievements_n_wi_fi_recommended">Download Achievements\n(Wi-Fi recommended)</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="select_your_news">Select Your News</string>
    <string name="blizzard_news">Blizzard News</string>
    <string name="warcraft_news">Warcraft News</string>
    <string name="diablo_news">Diablo News</string>
    <string name="starcraft_news">Starcraft News</string>
    <string name="overwatch_news">Overwatch News</string>
    <string name="hearthstone_news">Hearthstone News</string>
    <string name="heroes_of_the_storm_news">Heroes of The Storm News</string>
    <string name="news">News</string>
    <string name="hero">Hero</string>
    <string name="loadingdot">Loading . . .</string>
    <string name="battleground">Battleground</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="winpercent">Win %</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="turn_on_connection">Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="unavailable">Unavailable</string>
    <string name="unexpected">There was an unexpected error, please try again.</string>
    <string name="account_not_found">The account could not be found</string>
    <string name="ow_account_not_found">There is no Overwatch profile associated with this account.</string>
    <string name="sc2_account_not_found">There is no Starcraft 2 profile associated with this account.</string>
    <string name="sc2_servers_down">The Starcraft 2 community servers are down temporarily.</string>
    <string name="server_error">Server Error</string>
    <string name="blizz_server_down">There seems to be some problems with Blizzard\'s servers, please try again later</string>
    <string name="outdated_info">Information Outdated</string>
    <string name="login_again">Please login in game to update your account\'s information.</string>
    <string name="season">Season</string>
    <string name="era">Era</string>
    <string name="softcore">Softcore</string>
    <string name="hardcore">Hardcore</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="search">Search</string>
    <string name="covenant">Covenant</string>
    <string name="progress2">Progress</string>
    <string name="account">Account</string>
    <string name="raid_leaderboards">Raid Leaderboards</string>
    <string name="search_guild">Search Guild</string>
    <string name="guild_not_found">Guild Not Found</string>
    <string name="guild_not_found_message">The guild could not be found with the entered information</string>
    <string name="hascompleted">" has completed "</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="search_profile">Search Profile</string>
    <string name="error">Error</string>
    <string name="cn_message">Chinese region is not supported. Sorry for any inconvenience this may cause.</string>
    <string name="defeated">" was defeated on "</string>
    <string name="health">Health</string>
    <string name="agility">Agility</string>
    <string name="intellect">Intellect</string>
    <string name="stamina">Stamina</string>
    <string name="crit">Critical Strike</string>
    <string name="haste">Haste</string>
    <string name="mastery">Mastery</string>
    <string name="vers">Versatility</string>
    <string name="mplus_leaderboards">Mythic+ Leaderboards</string>
    <string name="realm">Realm</string>
    <string name="horde">Horde</string>
    <string name="alliance">Alliance</string>
    <string name="pvp_leaderboards">PvP Leaderboards</string>
    <string name="please_select_region">Please select a region</string>
    <string name="unstable_connection">Internet connection unstable</string>
    <string name="connected_network">Are you currently connected to a network?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connection_required">This application requires an active internet connection to continue</string>
    <string name="name">Name</string>
    <string name="character_class">Class</string>
    <string name="rank">Rank</string>
    <string name="key">Key</string>
    <string name="time">Time</string>
    <string name="affixes">Affixes</string>
    <string name="guild">Guild</string>
    <string name="rating">Rating</string>
    <string name="player">Player</string>
    <string name="faction">Faction</string>
</resources>