<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diablo3_main_window_no_separation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/paperdoll_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paperdoll"
            android:src="@drawable/paperdoll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/shoulder"
            android:layout_width="67dp"
            android:layout_height="87dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/shoulders"
            app:layout_constraintBottom_toTopOf="@id/gloves"
            app:layout_constraintEnd_toStartOf="@id/head"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toTopOf="@id/paperdoll_bg" />

        <ImageView
            android:id="@+id/gloves"
            android:layout_width="67dp"
            android:layout_height="87dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/gloves"
            app:layout_constraintBottom_toTopOf="@id/ring1"
            app:layout_constraintEnd_toStartOf="@id/chest"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/shoulder" />

        <ImageView
            android:id="@+id/ring1"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/ring1"
            app:layout_constraintBottom_toTopOf="@id/main_hand"
            app:layout_constraintEnd_toStartOf="@id/legs"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/gloves" />

        <ImageView
            android:id="@+id/main_hand"
            android:layout_width="67dp"
            android:layout_height="130dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/main_hand"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/boots"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/ring1" />


        <ImageView
            android:id="@+id/head"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/head"
            app:layout_constraintBottom_toTopOf="@id/chest"
            app:layout_constraintEnd_toStartOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/paperdoll_bg"
            app:layout_constraintTop_toTopOf="@id/paperdoll_bg" />

        <ImageView
            android:id="@+id/chest"
            android:layout_width="82dp"
            android:layout_height="115dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/chest"
            app:layout_constraintBottom_toTopOf="@id/belt"
            app:layout_constraintEnd_toStartOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/head"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/belt"
            android:layout_width="82dp"
            android:layout_height="34dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/belt"
            app:layout_constraintBottom_toTopOf="@id/legs"
            app:layout_constraintEnd_toStartOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/chest" />

        <ImageView
            android:id="@+id/legs"
            android:layout_width="67dp"
            android:layout_height="87dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/legs"
            app:layout_constraintBottom_toTopOf="@id/boots"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/belt" />

        <ImageView
            android:id="@+id/boots"
            android:layout_width="67dp"
            android:layout_height="87dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/boots"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toStartOf="@id/paperdoll_bg"
            app:layout_constraintTop_toBottomOf="@id/legs" />

        <ImageView
            android:id="@+id/amulet"
            android:layout_width="55dp"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/amulet"
            app:layout_constraintBottom_toTopOf="@id/bracers"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@+id/chest"
            app:layout_constraintTop_toTopOf="@id/paperdoll_bg" />

        <ImageView
            android:id="@+id/bracers"
            android:layout_width="67dp"
            android:layout_height="87dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/bracers"
            app:layout_constraintBottom_toTopOf="@id/ring2"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/chest"
            app:layout_constraintTop_toBottomOf="@id/amulet" />

        <ImageView
            android:id="@+id/ring2"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="23dp"
            android:contentDescription="@string/ring2"
            app:layout_constraintBottom_toTopOf="@id/off_hand"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/legs"
            app:layout_constraintTop_toBottomOf="@id/bracers" />

        <ImageView
            android:id="@+id/off_hand"
            android:layout_width="67dp"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/off_hand"
            app:layout_constraintBottom_toBottomOf="@id/paperdoll_bg"
            app:layout_constraintEnd_toEndOf="@id/paperdoll_bg"
            app:layout_constraintStart_toEndOf="@id/boots"
            app:layout_constraintTop_toBottomOf="@id/ring2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/item_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/item_stats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/diablo_light"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/image_stats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true">

                    <ImageView
                        android:id="@+id/weapon_effect"
                        android:layout_width="95dp"
                        android:layout_height="140dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/weapon_effect" />

                    <ImageView
                        android:id="@+id/item_icon"
                        android:layout_width="74dp"
                        android:layout_height="125dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/item_icon" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/armor_damage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:weightSum="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/typeName"
                            android:layout_width="0dp"
                            android:textAlignment="viewStart"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp" />

                        <TextView
                            android:layout_weight="1"
                            android:id="@+id/slot"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:textAlignment="viewEnd"
                            android:textColor="#505050" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

